# CSU44052-Luminous-Field

./: CMakeLists.txt  main.cpp  object.frag  object.vert
assets/green_alien/: license.txt  scene.gltf
assets/pine_tree_-_ps1_low_poly/: scene1.gltf
assets/rustic-cabin/: license.txt  scene.gltf
render/: shader.cpp  shader.h
shaders/: depth.frag  depth.vert  instance.vert  lightSourceBox.frag  lightSourceBox.vert  object.frag  object.vert
structs/: box.cpp  box.h  gltfModel.cpp  gltfModel.h  light.h  texture.cpp  texture.h  tile.cpp  tile.h  tileManager.cpp  tileManager.h
