cmake_minimum_required(VERSION 3.31)
project(CSU44052_Luminous_Field)
find_package(OpenGL REQUIRED)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")

add_subdirectory(external)

include_directories(
        external/glfw-3.1.2/include/
        external/glm-0.9.7.1/
        external/glad-opengl-3.3/include/
        external/
        render/
        structs/
)

add_executable(main
        main.cpp
        render/shader.cpp
        structs/box.cpp
        structs/texture.cpp
        structs/tile.cpp
        structs/tileManager.cpp
)

target_link_libraries(main
        ${OPENGL_LIBRARY}
        glfw
        glad
)